@@ -9,8 +9,8 @@ namespace libport
   void
   usage_error (const std::string& opt, const std::string& err)
   {
-    std::cerr << program_name << ": " << opt << ": " << err << std::endl;
-    exit (EX_USAGE);
+    std::cerr << program_name << ": " << opt << ": " << err << std::endl
+	      << libport::exit (EX_USAGE);
   }
 
   void
